# door_detection_smr

./: CMakeLists.txt  display.launch  frames.gv  package.xml  readme  readme~
maps/: clean.pgm  clean.yaml  cleaner.pgm  cleaner.yaml  cleanest.pgm  cleanest.yaml  lab_25mm.pgm  lab_25mm.yaml  lab_5cm.pgm  lab_5cm.yaml  lab_larger_5cm.pgm  lab_larger_5cm.yaml  map_full.pgm  map_full.yaml  map_full.yaml~
param/: costmap_common_params.yaml  costmap_common_params.yaml~  depth.yaml~  dwa_local_planner_params.yaml  dwa_local_planner_params.yaml~  global_costmap_params.yaml  global_costmap_params.yaml~  local_costmap_params.yaml~
src/: Final_handle.cpp  Final_handle.cpp~  Open_door_data.cpp~  PCL_method.cpp  PCL_method.cpp~  RGBD_cropped_creator.cpp  RGBD_cropped_creator.cpp~  RGBD_method.cpp  RGBD_method.cpp~  RGBD_method2.cpp~  RGBD_method_2.cpp~  echoer_test.py~  fusion.cpp~  open_door_data.cpp~  pcl_ros.cpp~  pcl_test.cpp~  ros_2_opencv.py~  test_boost.cpp~  transport_echoer.cpp~  transport_webcam.cpp~
src/other/: RGBD_method_old.cpp  echoer_test.py  fusion.cpp  hello.cpp  pcl_ros.cpp  pcl_test.cpp  ros_2_opencv.py  test_boost.cpp  transport_echoer.cpp  transport_sub.cpp  transport_webcam.cpp
urdf/: robot1.urdf~  smr.urdf
